[gd_scene load_steps=8 format=3 uid="uid://d37cep1ypwea6"]

[ext_resource type="Script" uid="uid://6kp8h0strgpc" path="res://HUDs/PauseMenu.gd" id="1"]
[ext_resource type="FontFile" uid="uid://o7m3yeirq5vk" path="res://Resources/fonts/KiriFont.ttf" id="2"]
[ext_resource type="FontFile" uid="uid://wige0wqmw7c7" path="res://Resources/fonts/Early GameBoy.ttf" id="3_w5m8w"]
[ext_resource type="Theme" uid="uid://bngt8jkm3fvb1" path="res://Resources/hud_elements/default.theme" id="4_44w5e"]
[ext_resource type="PackedScene" uid="uid://bwpheh7agwnlk" path="res://HUDs/Components/StylizedContainer.tscn" id="4_sqorb"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("2")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/32/0/ascent = 0.0
cache/0/32/0/descent = 0.0
cache/0/32/0/underline_position = 0.0
cache/0/32/0/underline_thickness = 0.0
cache/0/32/0/scale = 1.0
cache/0/32/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/32/0 = Vector2(0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_0pibi"]
font = ExtResource("3_w5m8w")
font_size = 24

[node name="PauseMenu" type="CanvasLayer" groups=["windows"]]
script = ExtResource("1")

[node name="BackgroundDimmer" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.8)

[node name="MenuLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -53.0
offset_top = 20.0
offset_right = 53.0
offset_bottom = 53.0
grow_horizontal = 2
theme_override_fonts/font = SubResource("1")
text = "Menu"
label_settings = SubResource("LabelSettings_0pibi")
horizontal_alignment = 1

[node name="QuitConfirm" type="ConfirmationDialog" parent="."]
title = ""
initial_position = 1
theme = ExtResource("4_44w5e")
ok_button_text = "yes"
dialog_text = "Exit the game?"

[node name="EndRunConfirm" type="ConfirmationDialog" parent="."]
auto_translate_mode = 1
title = ""
initial_position = 1
theme = ExtResource("4_44w5e")
ok_button_text = "YES"
dialog_text = "End your run here?"

[node name="BorderContainer" parent="." instance=ExtResource("4_sqorb")]
anchor_left = 0.45
anchor_top = 0.4
anchor_right = 0.55
anchor_bottom = 0.6

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -20.0
offset_right = 31.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_44w5e")
theme_override_font_sizes/font_size = 8
text = "QUIT"

[node name="EndRunButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_44w5e")
theme_override_font_sizes/font_size = 8
text = "End Run"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_44w5e")
theme_override_font_sizes/font_size = 8
text = "Settings"

[node name="SaveButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_44w5e")
theme_override_font_sizes/font_size = 8
text = "SAVE
"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -46.0
offset_right = 55.0
offset_bottom = 46.0
grow_vertical = 2

[node name="OptionButton1" type="OptionButton" parent="VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_w5m8w")

[node name="OptionButton2" type="OptionButton" parent="VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_w5m8w")

[node name="OptionButton3" type="OptionButton" parent="VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_w5m8w")

[node name="OptionButton4" type="OptionButton" parent="VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_w5m8w")

[node name="Descriptions" type="HBoxContainer" parent="."]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2

[node name="Name" type="Label" parent="Descriptions"]
texture_filter = 2
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Bolt
Crack
Charge
Storm
Cell
Vine
Rock
Fissure
Fountain
Displace
Suspend
Decay"

[node name="Desc" type="Label" parent="Descriptions"]
texture_filter = 2
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Projectile
Quick AOE
Slow to fast projectile
Lasting AOE
Projectile that grows
Straight line AOE
Slow projectile
Lasting AOE line
Small Delayed AOE
Stun Projectile
AOE Linger
Slowing Projectile"
horizontal_alignment = 2

[connection signal="confirmed" from="QuitConfirm" to="." method="_on_QuitConfirm_confirmed"]
[connection signal="confirmed" from="EndRunConfirm" to="." method="_on_end_run_confirm_confirmed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="VBoxContainer/EndRunButton" to="." method="_on_end_run_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="item_selected" from="VBoxContainer2/OptionButton1" to="." method="_on_option_button_item_selected"]
[connection signal="item_selected" from="VBoxContainer2/OptionButton2" to="." method="_on_option_button_2_item_selected"]
[connection signal="item_selected" from="VBoxContainer2/OptionButton3" to="." method="_on_option_button_3_item_selected"]
[connection signal="item_selected" from="VBoxContainer2/OptionButton4" to="." method="_on_option_button_4_item_selected"]
